--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
         </section>
         <section class="c4 mt-10">
             <div class="flex flex-col items-center text-center py-10 ">
-                <button class="btn-lg bg-[#acef5f77] inline-flex gap-2 rounded-3xl px-4 p-2 text-md font-bold shadow-sm"><img src="assets/pngwing.com (5).png" class="w-8" alt="">Explore our Latest works</button>
+                <button class="btn-lg bg-[#acef5f77] inline-flex gap-2 rounded-3xl px-4 p-2 mb-5 text-md font-bold shadow-sm"><img src="assets/pngwing.com (5).png" class="w-8" alt="">Explore our Latest works</button>
                     <h2 class="font-bold text-5xl my-3 ">Our Latest Portfolio</h2>
                     <p class="text-sm my-5 w-3/4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
                 </div>
             <div class="flex flex-col justify-center items-center gap-y-8">
-                <div class="grid grid-cols-2 max-lg:grid-cols-1 gap-10 px-10">
-                    <div class="card card-side flex justify-between items-center gap-8 bg-base-100 shadow-xl ">
+                <div class="grid grid-cols-3 max-lg:grid-cols-1 gap-10 px-10 max-w-7xl "  >
+                    <div class="card card-side col-span-2 flex justify-between items-center gap-8 bg-base-100 shadow-xl ">
                         <figure>
                           <img src="assets/img1.png" class="w-full h-60 " alt="Movie"/>
                         </figure>
@@ -127,15 +127,17 @@
                           </div>
                         </div>
                       </div>
-                    <div class="rounded-lg flex-1"><img src="assets/img2.png" alt=" " class="max-lg:w-full h-60"> </div>
+                    <div class="rounded-sm"><img src="assets/img2.png" alt=" " class="max-lg:w-full h-60"> </div>
                 </div>
-                <div class="flex items-center justify-around px-10">
+
+                <div class="grid grid-cols-3 max-lg:grid-cols-1 gap-8 justify-around px-10 max-w-7xl">
+                    <div class="col-span-2 flex max-lg:flex-col justify-between gap-8">
+                        <div class="rounded-sm"><img src="assets/img3.png" alt=" " class="max-lg:w-full h-60"> </div>  
                     <div class="card card-side flex items-center gap-5  bg-base-100 shadow-xl">
-                        <div class="rounded-lg"><img src="assets/img3.png" alt=" " class="max-w-full"> </div>      
                         <figure>
-                          <img src="assets/img4.png" alt="Movie"/>
+                          <img src="assets/img4.png" class="w-full h-60" alt="Movie"/>
                         </figure>
-                        <div class="card-body">
+                        <div class="card-body max-h-72">
                           <h2 class="card-title font-bold text-xl">Commercial</h2>
                           <p>The barn house captivates with its blend of rustic charm and modern. </p>
                           <div class="card-actions justify-start">
@@ -143,11 +145,86 @@
                           </div>
                         </div>
                       </div>
-                    <div class="rounded-lg"><img src="assets/img5.png" alt=" " class="max-w-full"> </div>
+                    </div>
+                    <div class="rounded-sm"><img src="assets/img5.png" alt=" " class="max-lg:w-full h-60"> </div>
                 </div>
             </div>
         </section>
-        <section class="c5 mt-10"></section>
+        <section class="c5 mt-20 bg-[#F4F4F4]">
+            <div class="flex flex-col items-center text-center py-10  ">
+                <button class="btn-lg bg-[#acef5f77] inline-flex gap-2 rounded-3xl px-4 p-2 mb-5 text-md font-bold shadow-sm"><img src="assets/pngwing.com (5).png" class="w-8" alt="">Rinterio News</button>
+                    <h2 class="font-bold text-5xl my-3 ">Read Our Articles and News</h2>
+                    <p class="text-sm my-5 w-3/4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+             <div class="flex max-lg:flex-col justify-center items-center gap-8 ">
+                <div class="card bg-white rounded-xl flex flex-col justify-center items-center bg-base-100 w-96 shadow-xl p-8">
+                    <figure>
+                      <img
+                        src="assets/article1.png"
+                        alt="article" />
+                    </figure>
+                    <div class="card-body">
+                        <div class=" inline-flex gap-5 my-3 p-2"><p class="text-xs h-5 inline-flex gap-1 opacity-85 items-center"><img src="assets/calendar.png" class="grayscale w-5" alt=""> 
+                        Augest26, 2024</p>
+                        <p class="inline-flex gap-1 text-xs h-5 opacity-85 items-center"><img src="assets/profile.png" class="grayscale w-5" alt=""> 
+                        By Admin</p>
+                        </div>
+                      <h2 class="card-title text-xl font-bold">
+                        How to choose the furniture right  of your home.
+                        <div class="badge badge-secondary">NEW</div>
+                      </h2>
+                      <p class="text-sm my-3">The barn house captivates with its blend of rustic charm and modern. </p>
+                      <div class="card-actions justify-start">
+                        <a class="link link-hover inline-flex font-bold ">Read More <img src="assets/pngwing.com (5).png" alt="" class="w-7"></a>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card bg-white rounded-xl flex flex-col justify-center items-center bg-base-100 w-96 shadow-xl p-8">
+                    <figure>
+                      <img
+                        src="assets/article2.png"
+                        alt="article" />
+                    </figure>
+                    <div class="card-body">
+                        <div class=" inline-flex gap-5 my-3 p-2"><p class="text-xs h-5 inline-flex gap-1 opacity-85 items-center"><img src="assets/calendar.png" class="grayscale w-5" alt=""> 
+                        Augest26, 2024</p>
+                        <p class="inline-flex gap-1 text-xs h-5 opacity-85 items-center"><img src="assets/profile.png" class="grayscale w-5" alt=""> 
+                        By Admin</p>
+                        </div>
+                      <h2 class="card-title text-xl font-bold">
+                        How to choose the furniture right  of your home.
+                        <div class="badge badge-secondary">NEW</div>
+                      </h2>
+                      <p class="text-sm my-3">The barn house captivates with its blend of rustic charm and modern. </p>
+                      <div class="card-actions justify-start">
+                        <a class="link link-hover inline-flex font-bold ">Read More <img src="assets/pngwing.com (5).png" alt="" class="w-7"></a>
+                      </div>
+                    </div>
+                  </div>
+                <div class="card bg-white rounded-xl flex flex-col justify-center items-center bg-base-100 w-96 shadow-xl p-8">
+                    <figure>
+                      <img
+                        src="assets/article3.png"
+                        alt="article" />
+                    </figure>
+                    <div class="card-body">
+                        <div class=" inline-flex gap-5 my-3 p-2"><p class="text-xs h-5 inline-flex gap-1 opacity-85 items-center"><img src="assets/calendar.png" class="grayscale w-5" alt=""> 
+                        Augest26, 2024</p>
+                        <p class="inline-flex gap-1 text-xs h-5 opacity-85 items-center"><img src="assets/profile.png" class="grayscale w-5" alt=""> 
+                        By Admin</p>
+                        </div>
+                      <h2 class="card-title text-xl font-bold">
+                        How to choose the furniture right  of your home.
+                        <div class="badge badge-secondary">NEW</div>
+                      </h2>
+                      <p class="text-sm my-3">The barn house captivates with its blend of rustic charm and modern. </p>
+                      <div class="card-actions justify-start">
+                        <a class="link link-hover inline-flex font-bold ">Read More <img src="assets/pngwing.com (5).png" alt="" class="w-7"></a>
+                      </div>
+                    </div>
+                  </div>
+             </div>
+        </section>
         <section class="c6 mt-10"></section>
     </main>
     <footer></footer>
