--- a/index.html
+++ b/index.html
@@ -225,7 +225,36 @@
                   </div>
              </div>
         </section>
-        <section class="c6 mt-10"></section>
+        <section class="c6 mt-10 bg-[url(assets/bg.jpg)] p-10">
+            <div class="flex flex-col items-center text-center py-10  ">
+                <button class="btn-lg bg-[#acef5f77] inline-flex gap-2 rounded-3xl px-4 p-2 mb-5 text-md font-bold shadow-sm"><img src="assets/pngwing.com (5).png" class="w-7" alt="">Let's Connect </button>
+                    <h2 class="font-bold text-5xl my-3 ">Let’s Discuss Next Project</h2>
+                    <p class="text-sm my-5 w-3/4">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+            </div>
+           <div class="flex flex-col justify-center xl:items-center">
+            <div class="grid max-md:grid-cols-1 grid-cols-2 gap-3 p-10">
+              <label class="input input-bordered text-sm flex items-center gap-2 p-3 rounded-3xl bg-white shadow-sm max-w-xl h-14">
+              <input type="text" id="" name="" class="grow w-full text-gray-900 h-full rounded-3xl p-2" placeholder="First Name*" />
+              </label>
+              <label class="input input-bordered text-sm flex items-center gap-2 p-3 rounded-3xl bg-white shadow-sm max-w-xl h-14">
+              <input type="text" id="" name="" class="grow w-full text-gray-900 h-full rounded-3xl p-2" placeholder="Last Name*" />
+              </label>
+              <label class="input input-bordered text-sm flex items-center gap-2 p-3 rounded-3xl bg-white shadow-sm max-w-xl h-14">
+              <input type="number" id="" name="" class="grow w-full text-gray-900 h-full rounded-3xl p-2" placeholder="Phone Number*" />
+              </label>
+              <label class="input input-bordered text-sm flex items-center gap-2 p-3 rounded-3xl bg-white shadow-sm max-w-xl h-14">
+              <input type="email" id="" name="" class="grow w-full text-gray-900 h-full rounded-3xl p-2" placeholder="E-mail*" />
+              </label>
+              <label class="input input-bordered md:col-span-2 flex  items-center gap-2 p-5 rounded-3xl bg-white shadow-sm max-w-full h-60 ">
+              <input type="text" id="" name="" class="grow w-full text-gray-900 h-full rounded-3xl p-2 " placeholder="Write your massage here" />
+              </label>
+              <label for="submit" class="input input-bordered   md:col-span-2 text-sm flex items-center gap-2 p-3 rounded-3xl bg-[#ABEF5F] shadow-sm max-w-full h-14">
+                <input type="submit" class="grow w-full text-gray-900 h-full rounded-3xl p-2" value="Send Mail">
+              </label>
+          </div>
+         
+           </div>
+        </section>
     </main>
     <footer></footer>
 </body>
