--- a/index.html
+++ b/index.html
@@ -256,6 +256,21 @@
            </div>
         </section>
     </main>
-    <footer></footer>
+    <footer class="bg-[#1C1C1C]">
+      <div class="flex flex-col justify-center items-center text-center gap-y-5 p-10 text-gray-300">
+        <h3 class="text-4xl font-extrabold inline-flex items-center gap-2"><div class="bg-[#ABEF5F] w-8 h-8 rounded-full"><img src="assets/pngwing.com (5).png" class="max-w-full py-1" alt=""></div>Rinterio</h3>
+        <p class="text-sm">
+          The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents. </p>
+        <div class=" flex justify-around max-md:flex-col gap-y-3 gap-x-8">
+          <a class="link link-hover"> Home</a>
+          <a class="link link-hover"> Services</a>
+          <a class="link link-hover">  Portfolio</a>
+          <a class="link link-hover">  Blogs</a>
+          <a class="link link-hover">Contact Us</a>
+        </div>
+        <button class="bg-[#ABEF5F] text-black p-1 px-2 rounded-2xl inline-flex gap-2 items-center font-bold  ">Book Consult <div class="bg-black w-6 h-6 rounded-full"><img src="assets/arrow.png" class="max-w-full p-1" alt=""></div></button>
+      </div> 
+    
+    </footer>
 </body>
 </html>
