--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="text-center max-w-3xl">
                 <h2 class="text-5xl font-extrabold my-5">A barn house of this design has a striking appearance</h2>
                 <p class="text-sm my-3">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.</p>
-                <button class="btn-lg bg-[#ABEF5F] inline-flex gap-2 max-w-52 rounded-3xl px-5 p-3 text-md font-bold">View Details</button>
+                <button class="btn-lg bg-[#ABEF5F] inline-flex items-center gap-2 max-w-52 rounded-3xl px-5 p-3 text-md font-bold"> <div class="bg-black w-6 h-6 rounded-full"><img src="assets/arrow.png" class="max-w-full p-1" alt=""></div>View Details</button>
             </div>
            </div>
         </section>
@@ -123,7 +123,7 @@
                           <h2 class="card-title font-bold text-xl ">Commercial</h2>
                           <p class="my-3">The barn house captivates with its blend of rustic charm and modern. </p>
                           <div class="card-actions justify-start">
-                            <a class="link link-hover inline-flex font-bold ">View Details <img src="assets/pngwing.com (5).png" alt="" class="w-7"></a>
+                            <a class="link link-hover inline-flex items-center gap-2 font-bold ">View Details <div class="bg-[#ABEF5F] w-6 h-6 rounded-full "><img src="assets/pngwing.com (5).png" class="max-w-full relative -rotate-45" alt=""></div></a>
                           </div>
                         </div>
                       </div>
@@ -141,7 +141,7 @@
                           <h2 class="card-title font-bold text-xl">Commercial</h2>
                           <p>The barn house captivates with its blend of rustic charm and modern. </p>
                           <div class="card-actions justify-start">
-                            <a class="link link-hover inline-flex font-bold">View Details <img src="assets/pngwing.com (5).png" alt="" class="w-7"></a>
+                            <a class="link link-hover inline-flex items-center gap-2 font-bold">View Details<div class="bg-[#ABEF5F] w-6 h-6 rounded-full "><img src="assets/pngwing.com (5).png" class="max-w-full relative -rotate-45" alt=""></div></a>
                           </div>
                         </div>
                       </div>
@@ -175,7 +175,7 @@
                       </h2>
                       <p class="text-sm my-3">The barn house captivates with its blend of rustic charm and modern. </p>
                       <div class="card-actions justify-start">
-                        <a class="link link-hover inline-flex font-bold ">Read More <img src="assets/pngwing.com (5).png" alt="" class="w-7"></a>
+                        <a class="link link-hover inline-flex items-center gap-2 font-bold ">Read More <div class="bg-[#ABEF5F] w-6 h-6 rounded-full "><img src="assets/pngwing.com (5).png" class="max-w-full relative -rotate-45" alt=""></div></a>
                       </div>
                     </div>
                   </div>
@@ -197,7 +197,7 @@
                       </h2>
                       <p class="text-sm my-3">The barn house captivates with its blend of rustic charm and modern. </p>
                       <div class="card-actions justify-start">
-                        <a class="link link-hover inline-flex font-bold ">Read More <img src="assets/pngwing.com (5).png" alt="" class="w-7"></a>
+                        <a class="link link-hover inline-flex items-center gap-2 font-bold ">Read More <div class="bg-[#ABEF5F] w-6 h-6 rounded-full "><img src="assets/pngwing.com (5).png" class="max-w-full relative -rotate-45" alt=""></div></a>
                       </div>
                     </div>
                   </div>
@@ -219,7 +219,7 @@
                       </h2>
                       <p class="text-sm my-3">The barn house captivates with its blend of rustic charm and modern. </p>
                       <div class="card-actions justify-start">
-                        <a class="link link-hover inline-flex font-bold ">Read More <img src="assets/pngwing.com (5).png" alt="" class="w-7"></a>
+                        <a class="link link-hover inline-flex items-center gap-2 font-bold ">Read More <div class="bg-[#ABEF5F] w-6 h-6 rounded-full "><img src="assets/pngwing.com (5).png" class="max-w-full relative -rotate-45" alt=""></div></a>
                       </div>
                     </div>
                   </div>
@@ -248,9 +248,11 @@
               <label class="input input-bordered md:col-span-2 flex  items-center gap-2 p-5 rounded-3xl bg-white shadow-sm max-w-full h-60 ">
               <input type="text" id="" name="" class="grow w-full text-gray-900 h-full rounded-3xl p-2 " placeholder="Write your massage here" />
               </label>
-              <label for="submit" class="input input-bordered   md:col-span-2 text-sm flex items-center gap-2 p-3 rounded-3xl bg-[#ABEF5F] shadow-sm max-w-full h-14">
+              <!-- <label for="submit" class="input input-bordered   md:col-span-2 text-sm flex items-center gap-2 p-3 rounded-3xl bg-[#ABEF5F] shadow-sm max-w-full h-14">
                 <input type="submit" class="grow w-full text-gray-900 h-full rounded-3xl p-2" value="Send Mail">
-              </label>
+                </label> -->
+                <button type="button" class="font-bold inline-flex items-center justify-center md:col-span-2 text-sm flex items-center gap-2 p-3 rounded-3xl bg-[#ABEF5F] shadow-sm max-w-full h-14 "> Send Mail<div class="bg-black w-6 h-6 rounded-full"><img src="assets/arrow.png" class="max-w-full p-1" alt=""></div></button>
+              
           </div>
          
            </div>
