--- a/index.html
+++ b/index.html
@@ -25,9 +25,78 @@
     </script>
 
 </head>
-<body>
-    <header></header>
-    <main class="max-w-full mx=auto">
+<body class="max-w-full mx=auto">
+    <header>
+      <div class="navbar bg-base-100 flex justify-between items-center p-5 gap-10">
+      <div class="flex">
+        <a class="btn btn-ghost text-2xl font-extrabold inline-flex items-center gap-2"><div class="bg-[#ABEF5F] w-8 h-8 rounded-full"><img src="assets/pngwing.com (5).png" class="max-w-full py-1" alt=""></div>Rinterio</a>
+      </div>   
+        <div class="flex text-center text-md font-bold justify-between gap-5 max-md:hidden">
+          <a class="link link-hover">Home</a>
+          <a class="link link-hover">Service</a>
+          <a class="link link-hover">Portfolio</a>
+          <a class="link link-hover">Blogs</a>
+          <a class="link link-hover">Contact Us</a>
+        </div>
+        <div class="flex justify-around items-center gap-3  max-md:hidden">
+          <div class="navbar-end">
+            <button class="btn btn-ghost btn-circle">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-6 w-6"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+              </svg>
+            </button>
+            </div>
+          <div class="dropdown dropdown-end cursor ">
+            <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
+              <div class="indicator">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-6 w-6"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor">
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                </svg>
+              </div>
+            </div>
+            </div>
+            <div> <button class="bg-[#ABEF5F] text-black p-1 px-2 rounded-2xl inline-flex gap-2 items-center font-bold  ">Book Consult <div class="bg-black w-6 h-6 rounded-full"><img src="assets/arrow.png" class="max-w-full p-1" alt=""></div></button>
+          </div>
+        </div> 
+          <div class="flex-end md:hidden">
+            <button class="btn btn-square btn-ghost">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                class="inline-block h-8 w-8 stroke-current">
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h16M4 18h16"></path>
+              </svg>
+            </button>
+          </div>
+              
+   
+        
+      </div>
+    </header>
+    <main >
         <section class="c1 mt-10">
            <div class="flex  flex-col justify-center items-center p-24">
             <div><img src="assets/banner.png" class="max-w-full" alt=""></div>
