--- a/index.html
+++ b/index.html
@@ -251,34 +251,34 @@
                         <figure>
                           <img src="assets/img1.png" class="w-full h-60 " alt="Movie"/>
                         </figure>
-                        <div class="card-body max-h-72 ">
+                        <div class="card-body h-60 ">
                           <h2 class="card-title font-bold text-xl ">Commercial</h2>
-                          <p class="my-3">The barn house captivates with its blend of rustic charm and modern. </p>
+                          <p class="my-2">The barn house captivates with its blend of rustic charm and modern. </p>
                           <div class="card-actions justify-start">
                             <a class="link link-hover inline-flex items-center gap-2 font-bold ">View Details <div class="bg-[#ABEF5F] w-6 h-6 rounded-full "><img src="assets/pngwing.com (5).png" class="max-w-full relative -rotate-45" alt=""></div></a>
+                           </div>
                           </div>
-                        </div>
-                      </div>
-                    <div class="rounded-sm"><img src="assets/img2.png" alt=" " class="max-lg:w-full h-60"> </div>
-                </div>
+                           </div>
+                    <div class="rounded-sm"><img src="assets/img2.png" alt=" "    class="w-full h-60"> </div>
+             </div>
 
                 <div class="grid grid-cols-3 max-lg:grid-cols-1 gap-8 justify-around px-10 max-w-7xl">
                     <div class="col-span-2 flex max-lg:flex-col justify-between gap-8">
-                        <div class="rounded-sm"><img src="assets/img3.png" alt=" " class="max-lg:w-full h-60"> </div>  
+                        <div class="rounded-sm"><img src="assets/img3.png" alt=" " class="w-full h-60"> </div>  
                     <div class="card card-side flex items-center gap-5  bg-base-100 shadow-xl">
                         <figure>
                           <img src="assets/img4.png" class="w-full h-60" alt="Movie"/>
                         </figure>
-                        <div class="card-body max-h-72">
+                        <div class="card-body h-60">
                           <h2 class="card-title font-bold text-xl">Commercial</h2>
-                          <p>The barn house captivates with its blend of rustic charm and modern. </p>
+                          <p class="my-2">The barn house captivates with its blend of rustic charm and modern. </p>
                           <div class="card-actions justify-start">
                             <a class="link link-hover inline-flex items-center gap-2 font-bold">View Details<div class="bg-[#ABEF5F] w-6 h-6 rounded-full "><img src="assets/pngwing.com (5).png" class="max-w-full relative -rotate-45" alt=""></div></a>
                           </div>
                         </div>
                       </div>
                     </div>
-                    <div class="rounded-sm"><img src="assets/img5.png" alt=" " class="max-lg:w-full h-60"> </div>
+                    <div class="rounded-sm"><img src="assets/img5.png" alt=" " class="w-full h-60"> </div>
                 </div>
             </div>
         </section>
@@ -392,7 +392,7 @@
                     </label>
                   </div>
                   <div class="form-control mt-6">
-                    <button herf="#login" class=" btn bg-black text-[#ABEF5F] p-2 px-3 hover:bg-[#4d6433f7] hover:text-black rounded-2xl flex gap-2 items-center font-extrabold w-fulll "><div class="bg-[#ABEF5F] border border-4 border-black w-8 h-8 rounded-full"><img src="assets/pngwing.com (5).png" class="max-w-full" alt=""></div> Login For Consult </button>
+                    <button herf="#login" class=" btn bg-black text-[#ABEF5F] p-2 px-3 hover:bg-[#4d6433f7] hover:text-black rounded-2xl flex gap-2 items-center font-extrabold w-fulll "><div class="bg-[#ABEF5F] border-4 border-black w-8 h-8 rounded-full"><img src="assets/pngwing.com (5).png" class="max-w-full" alt=""></div> Login For Consult </button>
                   </div>
                 </form>
               </div>
@@ -429,7 +429,7 @@
             <!-- <label for="submit" class="input input-bordered   md:col-span-2 text-sm flex items-center gap-2 p-3 rounded-3xl bg-[#ABEF5F] shadow-sm max-w-full h-14">
               <input type="submit" class="grow w-full text-gray-900 h-full rounded-3xl p-2" value="Send Mail">
               </label> -->
-              <button type="button" class="font-bold inline-flex items-center justify-center md:col-span-2 text-lg flex items-center gap-2 p-3 rounded-3xl bg-[#ABEF5F] shadow-sm max-w-full h-14 "> Send Mail<div class="bg-black w-6 h-6 rounded-full"><img src="assets/arrow.png" class="max-w-full p-1" alt=""></div></button>
+              <button type="button" class="font-bold justify-center md:col-span-2 text-lg flex items-center gap-2 p-3 rounded-3xl bg-[#ABEF5F] shadow-sm max-w-full h-14 "> Send Mail<div class="bg-black w-6 h-6 rounded-full"><img src="assets/arrow.png" class="max-w-full p-1" alt=""></div></button>
             
         </div>
        
