--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
              </div>
         </section>
         <!--Login -->
-         <section id="login mx-2" class="">
+         <section id="login " class="mx-2">
           <div class="hero bg-white min-h-screen">
             <div class="hero-content flex-col lg:flex-row-reverse gap-10 gap-x-20">
               
